# maybeawkward

./: .gitignore  BUILD.sh  CMakeLists.txt  README.md
MaybeAwkward/: MaybeAwkward.sln
MaybeAwkward/MaybeAwkward/: AIDontComeAnyCloserController.cpp  AIDontComeAnyCloserController.h  AIFlyingInPenisFormation.cpp  AIFlyingInPenisFormation.h  AIRoundingAroundYourDickController.cpp  AIRoundingAroundYourDickController.h  AbstractMessage.h  Animator.h  AnimatorNull.h  AnimatorSpriteSwitcher.cpp  AnimatorSpriteSwitcher.h  AttackMessage.h  Attacker.h  AttackerBullet.cpp  AttackerBullet.h  AttackerNull.h  BackgroundPlanFourManager.cpp  BackgroundPlanFourManager.h  BackgroundPlanThreeManager.h  Camera.cpp  Camera.h  Closure.h  Controller.h  ControllerNull.h  DeletionHandler.h  DeletionHandlerNull.h  DeletionHandlerTerrain.cpp  DeletionHandlerTerrain.h  Drawer.h  DrawerSprite.cpp  DrawerSprite.h  Entity.cpp  Entity.h  FuckYouChoucheController.cpp  FuckYouChoucheController.h  GameLogic.cpp  GameLogic.h  GraphicWrapper.cpp  GraphicWrapper.h  MaybeAwkward.vcxproj  (+31 more)
cmake/: Export.h.in  FindClanLib.cmake  FindClanLibDependencies.cmake  FindOsgVR_GUI.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/belettehell/: AABB.cpp  AABB.h  AIRoundingAroundYourDickController.cpp  AnimationMessage.h  AnimatorSpriteSwitcher.cpp  AnimatorSpriteSwitcher.h  AttackerBullet.cpp  AttackerBullet.h  BackgroundPlanFourManager.cpp  BackgroundPlanThreeManager.cpp  CMakeLists.txt  Camera.h  DeletionHandlerTerrain.cpp  Drawer.h  DrawerSprite.cpp  DrawerSprite.h  Entity.cpp  Entity.h  FuckYouChoucheController.cpp  FuckYouChoucheController.h  GameLogic.cpp  GameLogic.h  GraphicWrapper.cpp  GraphicWrapper.h  MessageReceiver.h  MessageVisitor.h  MockController.h  MultipleSpawnPattern.cpp  Node.h  Physics.cpp  Physics.h  QuadTreeProxy.h  SpeedMessage.h  SpriteComponent.cpp  SpriteComponent.h  TerrainManager.cpp  TerrainManager.h  World.cpp  XBoxController.cpp  collisions.h  (+5 more)
src/libs/: CMakeLists.txt
src/libs/QuadTree/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  QuadTree.h
src/plugins/: CMakeLists.txt
